--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -80,8 +80,8 @@
                         android:id="@+id/txt_name"
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
-                        android:layout_marginEnd="10dp"
                         android:layout_marginStart="5dp"
+                        android:layout_marginEnd="10dp"
                         android:layout_weight="1"
                         android:background="@drawable/style_editview"
                         android:ems="10"
@@ -127,8 +127,8 @@
                         android:id="@+id/txt_family"
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
-                        android:layout_marginEnd="10dp"
                         android:layout_marginStart="5dp"
+                        android:layout_marginEnd="10dp"
                         android:layout_weight="1"
                         android:background="@drawable/style_editview"
                         android:ems="10"
@@ -174,13 +174,13 @@
                         android:id="@+id/txt_national_id"
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
-                        android:layout_marginEnd="10dp"
                         android:layout_marginStart="5dp"
+                        android:layout_marginEnd="10dp"
                         android:layout_weight="1"
 
                         android:background="@drawable/style_editview"
                         android:ems="10"
-                        android:hint="کدملی  خود را وارد کنید(اختیاری)"
+                        android:hint="کدملی  خود را وارد کنید"
                         android:inputType="textPersonName"
                         android:paddingStart="5dp"
                         android:textAlignment="textStart"
@@ -222,8 +222,8 @@
                         android:id="@+id/txt_posti_id"
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
-                        android:layout_marginEnd="10dp"
                         android:layout_marginStart="5dp"
+                        android:layout_marginEnd="10dp"
                         android:layout_weight="1"
 
                         android:background="@drawable/style_editview"
@@ -270,8 +270,8 @@
                         android:id="@+id/txt_email"
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
-                        android:layout_marginEnd="10dp"
                         android:layout_marginStart="5dp"
+                        android:layout_marginEnd="10dp"
                         android:layout_weight="1"
 
                         android:background="@drawable/style_editview"
@@ -400,8 +400,8 @@
                         android:id="@+id/txt_tel"
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
-                        android:layout_marginEnd="5dp"
                         android:layout_marginStart="5dp"
+                        android:layout_marginEnd="5dp"
                         android:layout_weight="1"
                         android:background="@drawable/style_editview"
                         android:ems="10"
