--- a/app/src/main/res/layout/activity_car_search.xml
+++ b/app/src/main/res/layout/activity_car_search.xml
@@ -1580,12 +1580,12 @@
             android:visibility="gone">
 
             <LinearLayout
-                android:id="@+id/lay_header_bussiness"
+                android:id="@+id/lay_header_car"
                 android:layout_width="match_parent"
-                android:layout_height="25dp"
+                android:layout_height="40dp"
                 android:orientation="horizontal"
                 android:padding="1dp"
-                android:visibility="invisible"
+                android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -1602,7 +1602,7 @@
                     android:layout_weight="1"
                     android:background="#009ed7"
                     android:padding="0dp"
-                    android:text="آخرین  پرداخت"
+                    android:text="سال عوارض"
                     android:textAlignment="center"
                     android:textColor="@android:color/black"
                     android:textSize="8sp" />
@@ -1623,73 +1623,10 @@
                     android:layout_weight="1"
                     android:background="#009ed7"
                     android:padding="0dp"
-                    android:text="از سال"
+                    android:text="نرخ جریمه"
                     android:textAlignment="center"
                     android:textColor="@android:color/black"
-                    android:textSize="12sp" />
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight=".02"
-                    android:orientation="horizontal"></LinearLayout>
-
-                <com.sputa.avarez.my_views.MyTextView
-                    android:id="@+id/textView33"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_margin="0dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_weight="1"
-                    android:background="#009ed7"
-                    android:padding="0dp"
-                    android:text="تا سال"
-                    android:textAlignment="center"
-                    android:textColor="@android:color/black"
-                    android:textSize="12sp" />
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight=".02"
-                    android:orientation="horizontal"></LinearLayout>
-
-                <com.sputa.avarez.my_views.MyTextView
-                    android:id="@+id/textView3"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_margin="0dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_weight="1"
-                    android:background="#009ed7"
-                    android:padding="0dp"
-                    android:text="مالیات"
-                    android:textAlignment="center"
-                    android:textColor="@android:color/black"
-                    android:textSize="12sp" />
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight=".02"
-                    android:orientation="horizontal"></LinearLayout>
-
-                <com.sputa.avarez.my_views.MyTextView
-                    android:id="@+id/textView33"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_margin="0dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_weight="1"
-                    android:background="#009ed7"
-                    android:padding="0dp"
-                    android:text="مبلغ جریمه"
-                    android:textAlignment="center"
-                    android:textColor="@android:color/black"
-                    android:textSize="12sp" />
+                    android:textSize="9sp" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -1711,6 +1648,111 @@
                     android:textAlignment="center"
                     android:textColor="@android:color/black"
                     android:textSize="9sp" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".02"
+                    android:orientation="horizontal"></LinearLayout>
+
+                <com.sputa.avarez.my_views.MyTextView
+                    android:id="@+id/textView3"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="0dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_weight="1"
+                    android:background="#009ed7"
+                    android:padding="0dp"
+                    android:text="عوارض دیرکرد"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/black"
+                    android:textSize="9sp" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".02"
+                    android:orientation="horizontal"></LinearLayout>
+
+                <com.sputa.avarez.my_views.MyTextView
+                    android:id="@+id/textView33"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="0dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_weight="1"
+                    android:background="#009ed7"
+                    android:padding="0dp"
+                    android:text="مبلغ خدمات"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/black"
+                    android:textSize="9sp" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".02"
+                    android:orientation="horizontal"></LinearLayout>
+
+                <com.sputa.avarez.my_views.MyTextView
+                    android:id="@+id/textView33"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="0dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_weight="1"
+                    android:background="#009ed7"
+                    android:padding="0dp"
+                    android:text="دیرکرد خدمات"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/black"
+                    android:textSize="9sp" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".02"
+                    android:orientation="horizontal"></LinearLayout>
+
+                <com.sputa.avarez.my_views.MyTextView
+                    android:id="@+id/textView33"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="0dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_weight="1"
+                    android:background="#009ed7"
+                    android:padding="0dp"
+                    android:text="مبلغ خدمات"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/black"
+                    android:textSize="9sp" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".02"
+                    android:orientation="horizontal"></LinearLayout>
+
+                <com.sputa.avarez.my_views.MyTextView
+                    android:id="@+id/textView33"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="0dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_weight="1"
+                    android:background="#009ed7"
+                    android:padding="0dp"
+                    android:text="دیرکرد خدمات"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/black"
+                    android:textSize="9sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -1719,7 +1761,7 @@
                 android:layout_height="25dp"
                 android:orientation="horizontal"
                 android:padding="1dp"
-                android:visibility="invisible"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -1853,6 +1895,7 @@
                 android:layout_height="25dp"
                 android:orientation="horizontal"
                 android:padding="1dp"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -1890,7 +1933,7 @@
                     android:layout_weight="1"
                     android:background="#009ed7"
                     android:padding="0dp"
-                    android:text="از سال"
+                    android:text="نرخ جریمه"
                     android:textAlignment="center"
                     android:textColor="@android:color/black"
                     android:textSize="12sp" />
@@ -2011,7 +2054,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/lay_header_bussiness"
+                app:layout_constraintTop_toBottomOf="@+id/lay_header_car"
                 app:layout_constraintVertical_bias="0.0" />
 
             <LinearLayout
