--- a/app/src/main/res/layout/activity_ghabz_search.xml
+++ b/app/src/main/res/layout/activity_ghabz_search.xml
@@ -891,7 +891,7 @@
             android:visibility="gone">
 
             <LinearLayout
-                android:id="@+id/lay_header_bussiness"
+                android:id="@+id/lay_header_car"
                 android:layout_width="match_parent"
                 android:layout_height="25dp"
                 android:orientation="horizontal"
@@ -1010,7 +1010,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/lay_header_bussiness"
+                app:layout_constraintTop_toBottomOf="@+id/lay_header_car"
                 app:layout_constraintVertical_bias="0.0" />
 
             <LinearLayout
