--- a/app/src/main/res/layout/nav_header_drawer_test.xml
+++ b/app/src/main/res/layout/nav_header_drawer_test.xml
@@ -4,13 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
     android:background="@drawable/side_nav_bar"
-    android:gravity="bottom"
+    android:gravity="top"
     android:layoutDirection="rtl"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
@@ -31,7 +31,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <com.sputa.avarez.my_views.MyTextView
@@ -45,10 +45,33 @@
             android:id="@+id/txt_logout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="clk_exit_profile"
             android:layout_marginStart="5dp"
             android:text="خروج"
             android:textColor="#0400d7" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <com.sputa.avarez.my_views.MyTextView
+            android:id="@+id/txt_city"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ارومیه"
+            android:textColor="@android:color/black" />
+        <com.sputa.avarez.my_views.MyTextView
+            android:id="@+id/txt_changeCity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+
+            android:text=" (تغییر)"
+            android:textColor="#0400d7"
+                        />
+
 
     </LinearLayout>
 
